# SDF-Python

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  DEV_README.md  LICENSE  MANIFEST.in  README.md  README.rst  appveyor.yml  build.bat  build.sh  build_linux.sh  build_mac.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml
C/: CMakeLists.txt
C/VisualStudio/: .gitignore  Python.vcxproj  Python.vcxproj.filters
C/Xcode/NDTable.xcodeproj/: project.pbxproj
C/Xcode/NDTable.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
C/include/: Python.h
C/src/: Python.c
sdf/: __init__.py  dsres.py  hdf5.py  ndtable.py  test.py  units.py
sdf/darwin64/: libNDTable.dylib
sdf/examples/: IntegerNetwork1.xlsx  excel2sdf.py  interp_1d.py  interp_2d.py  plot_dymola_result.py  sine.py  spline_1d.py  time_series.xlsx
sdf/plot/: contour_plot.py  contour_plot_3d.py  plot_time_series.py
src/sdf/: __init__.py  dsres.py  hdf5.py  units.py
src/sdf/examples/: IntegerNetwork1.mat  excel2sdf.py  interp_1d.py  interp_2d.py  plot_dymola_result.py  sine.py  spline_1d.py
src/sdf/ndtable/: __init__.py
src/sdf/ndtable/x86-windows/: NDTable.lib
src/sdf/ndtable/x86_64-windows/: NDTable.lib
src/sdf/plot/: contour_plot.py  contour_plot_3d.py  plot_time_series.py
tests/: test_sdf.py
